--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "cakephp/migrations": "^3.2",
         "cakephp/plugin-installer": "^1.3",
         "mobiledetect/mobiledetectlib": "^2.8",
-        "phpmailer/phpmailer": "^6.8"
+        "phpmailer/phpmailer": "^6.8",
+        "vlucas/phpdotenv": "^5.5"
     },
     "require-dev": {
         "cakephp/bake": "^2.6",
