--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "cakephp/plugin-installer": "^1.3",
         "mobiledetect/mobiledetectlib": "^2.8",
         "phpmailer/phpmailer": "^6.8",
+        "phpoffice/phpexcel": "^1.8",
+        "phpoffice/phpspreadsheet": "^1.28",
         "vlucas/phpdotenv": "^5.5"
     },
     "require-dev": {
